web-infras/parser/tests/fixtures/esprima/es2020/optional-chaining/invalid-optional-chaining-indirect-template-string/output.txt
[SyntaxError]: Invalid tagged template on optional chain (1,5)
1|a?.b`c`
 |   ^
